feat: adiciona classe record ExchangeRateAPI para modelagem de dados